--- a/问题一.md
+++ b/问题一.md
@@ -4,10 +4,15 @@
 应聘人员 报酬(元/h ) 第一天最多可安排的工作时间(h ) 第二天最多可安排的工作时间(h ) 第三天最多可安排的工作时间(h ) 第四天最多可安排的工作时间(h ) 第五天最多可安排的工作时间(h )。
 
 女A 18 6 6 0 0 7
-女B 19 0 6 0 6 0  
-女C 20 4 8 3 0 5  
+
+女B 19 0 6 0 6 0  
+
+女C 20 4 8 3 0 5  
+
 女D 18 5 5 6 0 4 
+
 男A 26 3 0 4 8 0
+
 男B 25 0 6 0 6 3  
 
 已知该超市开放时间为上午8:00至晚上10:00，开放时间内必须有一名小时工值勤工作。为了不让工作人员过于疲劳，规定在5天内每名女工的值勤时间不少于8小时，每名男工的值勤时间不少于10小时。在不考虑其他任何条件下，按要求解答:
@@ -49,75 +54,55 @@ x<sub>i,j</sub> ≥ 0，对于 i = 1, 2, 3, 4, 5；j = 1, 2, 3, 4, 5, 6
 
 ```matlab
 % 工作时间表
-
 workHours = [6 6 0 0 7;
-
-             0 6 0 6 0;
-
-             4 8 3 0 5;
-
-             5 5 6 0 4;
-
-             3 0 4 8 0;
-
-             0 6 0 6 3];
+             0 6 0 6 0;
+             4 8 3 0 5;
+             5 5 6 0 4;
+             3 0 4 8 0;
+             0 6 0 6 3];
 
 % 报酬表
-
 wages = [18; 19; 20; 18; 26; 25];
 
 % 定义变量
-
 numDays = 5;
-
 numWorkers = 6;
-
 x = optimvar('x', numDays, numWorkers, 'Type', 'integer', 'LowerBound', 0);
 
 % 目标函数
-
-totalPay = sum(sum(wages .* x));
-
-% 约束条件
-
-constraints = [
-
-    % 每名女工的总工作时间不少于8小时
-
-    sum(x(:, 1:4), 1) >= 8;
-
-    % 每名男工的总工作时间不少于10小时
-
-    sum(x(:, 5:6), 1) >= 10;
-
-    % 每天值勤人数不超过3人
-
-    sum(x, 2) <= 3
-
-];
+totalPay = sum(sum(x .* repmat(wages, 1, numDays)'), 'all');
 
 % 创建问题
+problem = optimproblem('Objective', totalPay);
 
-problem = optimproblem('Objective', totalPay, 'Constraints', constraints);
+% 约束条件
+constraints = optimconstr(numWorkers + numDays);
+% 每名女工的总工作时间不少于8小时
+for i = 1:4
+    constraints(i) = sum(x(:, i)) >= 8;
+end
+% 每名男工的总工作时间不少于10小时
+for i = 5:6
+    constraints(i) = sum(x(:, i)) >= 10;
+end
+% 每天值勤人数不超过3人
+for i = 1:numDays
+    constraints(numWorkers + i) = sum(x(i, :)) <= 3;
+end
+
+problem.Constraints = constraints;
 
 % 求解问题
-
 [solution, fval] = solve(problem);
 
 % 提取结果
-
 result = solution.x;
 
 % 显示结果
-
 disp("最优值勤时间分配方案：");
-
 disp(result);
-
 disp("最小总支付报酬：");
-
 disp(fval);
-
 ```
 
 请注意，这只是一个示例代码，您可能需要根据实际情况进行适当的调整。确保已经安装了MATLAB的优化工具箱（Optimization Toolbox）以运行这段代码。运行后，将显示最优的值勤时间分配方案以及对应的最小总支付报酬。
