--- a/.trash/202306041931.md
+++ b/.trash/202306041931.md
@@ -1,10 +1,12 @@
-# {{title}}
+# 202306041931
 
-## 时间： {{date}} {{time}}
+## 时间： {{data}} 19:31
 
 ## 内容：
 [在这里记录您的笔记内容]
+![[../Excalidraw/Drawing 2023-06-04 19.33.49.excalidraw|Drawing 2023-06-04 19.33.49.excalidraw]]
 
+![[../develop/live-server#3. Node.js live-server|live-server]]
 ## 标签：
 - #标签1
 
