--- a/Deep-Learning/深度学习指南.md
+++ b/Deep-Learning/深度学习指南.md
@@ -89,3 +89,11 @@ print(predictions)
 9. 打印预测结果：将预测结果输出到控制台。
 
 该示例是一个简单的二分类问题，通过一个具有单个隐藏层的神经网络来对输入数据进行分类。该代码展示了神经网络的基本概念和运行过程，包括权重的初始化、前向传播和预测结果的计算。请注意，这只是一个简化的示例，实际应用中的神经网络可能更加复杂和深层。
+
+概率论中的卷积公式和机器学习算法中的卷积操作有一些相似之处，但并不完全相同。
+
+在概率论中，卷积是一种将两个随机变量的概率分布函数组合起来的运算。它描述了两个随机变量之和的分布情况。卷积的结果是一个新的概率分布函数，表示两个变量之和的可能取值和对应的概率。
+
+而在机器学习中，卷积是一种常用的数学操作，通常用于处理图像和序列数据。卷积操作是通过在输入数据上滑动一个固定大小的窗口（称为卷积核或过滤器），并对窗口中的数据进行逐元素相乘和求和，得到输出结果的过程。卷积在机器学习中被广泛用于提取特征并进行数据的降维和平滑处理。
+
+虽然两者的名称相同，但在具体运算和应用上有所不同。概率论中的卷积操作是用于组合概率分布函数，而机器学习中的卷积操作是一种特定的数学运算，常用于处理图像和序列数据。
